--- a/index.html
+++ b/index.html
@@ -13,70 +13,172 @@
 
 <body>
 
-    <div class="blog">
-        <section class="center">
-            <h2 class="titulo">BLOG: Fatech</h2>
-            <div class="noticias">
-                <DIV class="item">
-                    <div class="imagem">
-                        <img src="img/noticias.png" alt="">
-                    </div>
-                    <h3 class="title">
-                        Título da Notícia Título da Notícia Título da Notícia
-                    </h3>
-                    <hr>
-                    <div class="texto">
-                        Descrição do Conteúdo Descrição do Conteúdo Descrição do Conteúdo Descrição do Cont...
-                    </div>
-
-                    <a href="">
-                        <div class="btnBlack">
-                            LEIA MAIS
-                        </div>
-                    </a>
-                </DIV>
-                <DIV class="item">
-                    <div class="imagem">
-                        <img src="img/noticias.png" alt="">
-                    </div>
-                    <h3 class="title">
-                        Título da Notícia Título da Notícia Título da Notícia
-
-                    </h3>
-                    <hr>
-                    <div class="texto">
-                        Descrição do Conteúdo Descrição do Conteúdo Descrição do Conteúdo Descrição do Cont...
-                    </div>
-                    <a href="">
-                        <div class="btnBlack">
-                            LEIA MAIS
-                        </div>
-                    </a>
-                </DIV>
-                <DIV class="item">
-                    <div class="imagem">
-                        <img src="img/noticias.png" alt="">
-                    </div>
-                    <h3 class="title">
-                        Título da Notícia Título da Notícia Título da Notícia
-
-                    </h3>
-                    <hr>
-                    <div class="texto">
-                        Descrição do Conteúdo Descrição do Conteúdo Descrição do Conteúdo Descrição do Cont...
-                    </div>
-
-                    <a href="">
-                        <div class="btnBlack">
-                            LEIA MAIS
-                        </div>
-                    </a>
-                </DIV>
+    <header>
+        <section>
+            <div class="logo">
+                <img src="img/fatech.png" alt="" srcset="">
             </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="#atracoes">Atrações</a></li>
+                    <li><a href="#localizacao">Localização</a></li>
+                    <li><a href="#cardapio">Cardápio</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </section>
+    </header>
+    <div class="slider">
+        <div class="banner">
+            <div class="texto-dir">
+                <h1>FATECH</h1>
+                <p>Feira de Administração e Tecnologia
+                    <br>Mendes Gonçalves
+                </p>
+            </div>
+            <div class="texto-esq">
+                <p>
+                    <b>09 e 10 de novembro de 2023</b>
+                    Colégio Estadual Mendes Gonçalves
+                    <b>Guaíra Paraná</b>
+                </p>
+            </div>
+            <div class="background"></div>
+        </div>
+    </div>
+    <div class="sobre">
+        <section>
+            <div class="img">
+                <img src="img/sobre.png" alt="" srcset="">
+            </div>
+            <h2 class="titulo">
+                SOBRE A FEIRA
+            </h2>
+            <p class="sobre">
+              
+                lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a tyCpe specimen book. It has survived not only five centuries.
+            </p>
+            <div class="btnBlack">
+                Continue lendo
+            </div>
+            <div class="both"></div>
         </section>
     </div>
-    <div class="both"></div>
-    
+
+    <div class="apoio">
+        <section class="center">
+            <h2 class="titulo">APOIO:</h2>
+            <ul class="marcas"></ul>
+        </section>
+        <section>
+            <ul class="marcas">
+                <li>
+                    <a href="#">
+                        <img src="img/logotipo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/logotipo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/logotipo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/logotipo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/logotipo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/logotipo.png">
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <div class="blog">
+        <section class="center">
+            <h2 class="titulo">BLOG: FATECH</h2>
+            <div class="noticias">
+                <div class="item">
+                    <div class="imagem">
+                        <img src="img/noticias.png" alt="" srcset="">
+                    </div>
+                    <h3 class="tittle">
+                        Título da Notícia Título da Notícia Título da Notícia
+                    </h3>
+                    <hr>
+                    <div class="texto">
+                        Descrição do Conteúdo Descrição do Conteúdo Descrição do
+                        Conteúdo Descrição do Conteudo
+                    </div>
+                    <a href="#">
+                        <diV class="btnBlack">
+                            Leia Mais
+                        </diV>
+                    </a>
+                </div>
+                <div class="item">
+                    <div class="imagem">
+                        <img src="img/noticias.png" alt="" srcset="">
+                    </div>
+                    <h3 class="tittle">
+                        Título da Notícia Título da Notícia Título da Notícia
+                    </h3>
+                    <hr>
+                    <div class="texto">
+                        Descrição do Conteúdo Descrição do Conteúdo Descrição do
+                        Conteúdo Descrição do Conteudo
+                    </div>
+                    <a href="#">
+                        <diV class="btnBlack">
+                            Leia Mais
+                        </diV>
+                    </a>
+                </div>
+                <div class="item">
+                    <div class="imagem">
+                        <img src="img/noticias.png" alt="" srcset="">
+                    </div>
+                    <h3 class="tittle">
+                        Título da Notícia Título da Notícia Título da Notícia
+                    </h3>
+                    <hr>
+                    <div class="texto">
+                        Descrição do Conteúdo Descrição do Conteúdo Descrição do
+                        Conteúdo Descrição do Conteudo
+                    </div>
+                    <a href="#">
+                        <diV class="btnBlack">
+                            Leia Mais
+                        </diV>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <div class="both"></div>
+        <section>
+            <a href="blog" class="maisblog">
+                Mais do Blog FATECH
+            </a>
+        </section>
+    </div>
+
+
     <div class="praca">
         <section class="center">
             <h2 class="titulo">PRAÇA DE ALIMENTAÇÃO</h2>
@@ -84,7 +186,8 @@
                 <img src="img/praca.png" alt="Praça de Alimentação">
             </div>
             <div class="descricao">
-                A praça de alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a A praça
+                A praça de alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a A
+                praça
                 de alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a A praça de
                 alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a A praça de
                 alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a
@@ -153,12 +256,16 @@
                     </div>
                     <div class="descricao">
                         <h2>CASA INTELIGENTE</h2>
-                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR
                         LOREM
-                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM
                         IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM
                         DOLLOR
                     </div>
                 </section>
@@ -173,12 +280,16 @@
                     </div>
                     <div class="descricao">
                         <h2>IMPRESSÃO 3D</h2>
-                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR
                         LOREM
-                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM
                         IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM
                         DOLLOR
                     </div>
                 </section>
@@ -193,12 +304,16 @@
                     </div>
                     <div class="descricao">
                         <h2>CASA DE GAMES</h2>
-                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR
                         LOREM
-                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM
                         IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM
                         DOLLOR
                     </div>
                 </section>
@@ -213,12 +328,16 @@
                     </div>
                     <div class="descricao">
                         <h2>CIRCUITO DE DRONE</h2>
-                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR
                         LOREM
-                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM
                         IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM
                         DOLLOR
                     </div>
                 </section>
@@ -307,7 +426,7 @@
             Alunos do Curso Técnico em Desenvolvimento de Sistemas, Técnicos em Informática e Administração.
             <br>
             <b>
-                Matheus Gabriel Dalla Valle - Todos os direitos reservados
+                Prof. Alan Reis - Todos os direitos reservador
             </b>
         </p>
     </footer>
