--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
             <div class="logo">
                 <img src="img/fatech.png" alt="" srcset="">
             </div>
+            <nav class="mobile">
+                <ul>
+                    <li>
+                        <a href="#">menu</a>
+
+                        <ul class="sub">
+                            <li><a href="/">Home</a></li>
+                            <li><a href="sobre">Sobre</a></li>
+                            <li><a href="#atrações">Atrações</a></li>
+                            <li><a href="#localização">Localização</a></li>
+                            <li><a href="cardapio">Cardápio</a></li>
+                            <li><a href="#contato.html">contato</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -57,7 +73,7 @@
                 SOBRE A FEIRA
             </h2>
             <p class="sobre">
-              
+
                 lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a tyCpe specimen book. It has survived not only five centuries.
@@ -72,113 +88,116 @@
     <div class="apoio">
         <section class="center">
             <h2 class="titulo">APOIO:</h2>
-            <ul class="marcas"></ul>
-        </section>
-        <section>
             <ul class="marcas">
                 <li>
                     <a href="#">
                         <img src="img/logotipo.png">
                     </a>
                 </li>
+
                 <li>
                     <a href="#">
                         <img src="img/logotipo.png">
                     </a>
                 </li>
+
                 <li>
                     <a href="#">
                         <img src="img/logotipo.png">
                     </a>
                 </li>
+
                 <li>
                     <a href="#">
                         <img src="img/logotipo.png">
                     </a>
                 </li>
+
                 <li>
                     <a href="#">
                         <img src="img/logotipo.png">
                     </a>
                 </li>
+
                 <li>
                     <a href="#">
                         <img src="img/logotipo.png">
                     </a>
                 </li>
+
             </ul>
         </section>
     </div>
+
     <div class="blog">
         <section class="center">
             <h2 class="titulo">BLOG: FATECH</h2>
             <div class="noticias">
                 <div class="item">
                     <div class="imagem">
-                        <img src="img/noticias.png" alt="" srcset="">
+                        <img src="./img/noticias.png" alt="">
                     </div>
-                    <h3 class="tittle">
-                        Título da Notícia Título da Notícia Título da Notícia
+                    <h3 class="title">
+                        Titulo da noticia titulo da noticia titulo da noticia
                     </h3>
                     <hr>
                     <div class="texto">
-                        Descrição do Conteúdo Descrição do Conteúdo Descrição do
-                        Conteúdo Descrição do Conteudo
+                        Descricao do conteudo descricao do conteudo descricao do conteudo descricao do
+                        conteudodescricao
+                        do conteudo
                     </div>
-                    <a href="#">
-                        <diV class="btnBlack">
+                    <a href="">
+                        <div class="btnBlack">
                             Leia Mais
-                        </diV>
+                        </div>
                     </a>
                 </div>
                 <div class="item">
                     <div class="imagem">
-                        <img src="img/noticias.png" alt="" srcset="">
+                        <img src="./img/noticias.png" alt="">
                     </div>
-                    <h3 class="tittle">
-                        Título da Notícia Título da Notícia Título da Notícia
+                    <h3 class="title">
+                        Titulo da noticia titulo da noticia titulo da noticia
                     </h3>
                     <hr>
                     <div class="texto">
-                        Descrição do Conteúdo Descrição do Conteúdo Descrição do
-                        Conteúdo Descrição do Conteudo
+                        Descricao do conteudo descricao do conteudo descricao do conteudo descricao do
+                        conteudodescricao
+                        do conteudo
                     </div>
-                    <a href="#">
-                        <diV class="btnBlack">
-                            Leia Mais
-                        </diV>
+                    <a href="">
+                        <div class="btnBlack">
+                            Leia mais
+                        </div>
                     </a>
                 </div>
                 <div class="item">
                     <div class="imagem">
-                        <img src="img/noticias.png" alt="" srcset="">
+                        <img src="./img/noticias.png" alt="">
                     </div>
-                    <h3 class="tittle">
-                        Título da Notícia Título da Notícia Título da Notícia
+                    <h3 class="title">
+                        Titulo da noticia titulo da noticia titulo da noticia
                     </h3>
                     <hr>
                     <div class="texto">
-                        Descrição do Conteúdo Descrição do Conteúdo Descrição do
-                        Conteúdo Descrição do Conteudo
+                        Descricao do conteudo descricao do conteudo descricao do conteudo
+                        descricao do conteudodescricao do conteudo
                     </div>
-                    <a href="#">
-                        <diV class="btnBlack">
-                            Leia Mais
-                        </diV>
+                    <a href="">
+                        <div class="btnBlack">
+                            Leia mais
+                        </div>
                     </a>
                 </div>
             </div>
         </section>
-
         <div class="both"></div>
         <section>
-            <a href="blog" class="maisblog">
-                Mais do Blog FATECH
+            <a href="blog" class="maisdoblog">
+                Mais do blog FATECH >>
             </a>
         </section>
     </div>
-
-
     <div class="praca">
         <section class="center">
             <h2 class="titulo">PRAÇA DE ALIMENTAÇÃO</h2>
@@ -186,10 +205,12 @@
                 <img src="img/praca.png" alt="Praça de Alimentação">
             </div>
             <div class="descricao">
-                A praça de alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a A
-                praça
-                de alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a A praça de
-                alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a A praça de
+                A praça de alimentação serve pra se alimentar a A praça de alimentação serve pra se
+                alimentar a A praça
+                de alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a A
+                praça de
+                alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a A praça
+                de
                 alimentação serve pra se alimentar a A praça de alimentação serve pra se alimentar a
             </div>
         </section>
@@ -256,16 +277,16 @@
                     </div>
                     <div class="descricao">
                         <h2>CASA INTELIGENTE</h2>
-                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
-                        DOLLOR
+                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM DOLLOR
                         LOREM
-                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
-                        LOREM
+                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR LOREM
                         IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
-                        IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
-                        IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM
                         DOLLOR
                     </div>
                 </section>
@@ -280,16 +301,16 @@
                     </div>
                     <div class="descricao">
                         <h2>IMPRESSÃO 3D</h2>
-                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
-                        DOLLOR
+                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM DOLLOR
                         LOREM
-                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
-                        LOREM
+                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR LOREM
                         IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
-                        IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
-                        IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM
                         DOLLOR
                     </div>
                 </section>
@@ -304,16 +325,16 @@
                     </div>
                     <div class="descricao">
                         <h2>CASA DE GAMES</h2>
-                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
-                        DOLLOR
+                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM DOLLOR
                         LOREM
-                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
-                        LOREM
+                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR LOREM
                         IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
-                        IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
-                        IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM
                         DOLLOR
                     </div>
                 </section>
@@ -328,16 +349,16 @@
                     </div>
                     <div class="descricao">
                         <h2>CIRCUITO DE DRONE</h2>
-                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
-                        DOLLOR
+                        LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
+                        IPSUM DOLLOR
                         LOREM
-                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
-                        LOREM
+                        IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM
+                        DOLLOR LOREM
                         IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
-                        IPSUM
-                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM
-                        IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM
+                        DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR LOREM IPSUM DOLLOR
+                        LOREM IPSUM
                         DOLLOR
                     </div>
                 </section>
@@ -380,6 +401,8 @@
                 <div class="logotipo">
                     <img src="img/logotipo.png">
                 </div>
+
+
                 <div class="itensrodape">
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -426,7 +449,7 @@
             Alunos do Curso Técnico em Desenvolvimento de Sistemas, Técnicos em Informática e Administração.
             <br>
             <b>
-                Prof. Alan Reis - Todos os direitos reservador
+                Matheus Gabriel Dalla Valle - Todos os direitos reservados
             </b>
         </p>
     </footer>
